

@startuml

title __CONTROLLERS's Class Diagram__\n

  package controllers {
    class App {
        {static} + stage : Stage
        + start()
    }
  }
  

  package controllers {
    class ErrorController {
        + label : Label
        + initialize()
    }
  }
  

  package controllers {
    class JavaQuizController {
        ~ username : String
        ~ address : String
        ~ port : int
        ~ socket : Socket
        {static} + errorCode : String
        - xOffset : double
        - yOffset : double
        - start : long
        - parent : AnchorPane
        - homePane : AnchorPane
        - testPane : AnchorPane
        - finishedPane : AnchorPane
        - resultPane : AnchorPane
        - progress : ProgressIndicator
        - questionLbl : TextArea
        - response1 : JFXRadioButton
        - response2 : JFXRadioButton
        - response3 : JFXRadioButton
        - response4 : JFXRadioButton
        - questions : List<Question>
        - instanceQuestion : Map<Integer, Integer>
        {static} - MAX_NUMBER_QUESTION : int
        {static} - currentQuestionIndex : int
        - finalScore : Label
        - finalPercentageScore : Label
        + initialize()
        - makeStageDraggable()
        - loadQuestions()
        - btnPrevious()
        - btnNext()
        - showQuestion()
        - saveInstance()
        - radioClicked()
        ~ btnBackTest()
        - btnViewResult()
    }
  }
  

  package controllers {
    class LoginController {
        + username : TextField
        + address : TextField
        + port : TextField
        + error : Label
        {static} + name : String
        {static} + serverAddress : String
        {static} + serverPort : int
        {static} + quizStage : Stage
        + login()
        + changeLabe()
    }
  }
  

  App -up-|> Application
  ErrorController -up-|> Initializable
  JavaQuizController -up-|> Initializable
  JavaQuizController o-- LoginController : loginController
  JavaQuizController o-- Connection : connection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
